<resources>
    <string name="app_name">Jumper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_notification1">Settings</string>
    <string name="title_activity_flipscreen">Settings</string>
    <string name="title_activity_login">Settings</string>
    <string name="title_activity_splash">Settings</string>
    <string name="title_activity_trip_info">Trip Info</string>
    <string name="title_activity_company">Company</string>
    <string name="title_activity_trip_info_1">Trip_info_1</string>
    <string name="title_activity_advanced_search">Advanced_search</string>
    <string name="title_activity_advanced__search1">Advanced_Search1</string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="init_text">00:00</string>
    <string name="play_pause_description">Play Pause Button</string>
    <string name="loading">Loading…</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: 1.0</string>
    <string name="popular_header">Popular Videos</string>
    <string name="preferences">PREFERENCES</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="should_start">shouldStart</string>
    <string name="start_position">startPosition</string>
    <string name="search_results">Search Results</string>

    <!-- Error messages -->
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="oops">Oops</string>
    <string name="title_activity_trip_final">Trip_final</string>
    <string name="travelanywhere">Travel anywhere</string>
    <string name="Jumper">Jumper</string>
    <string name="alreadyjumper">Already a Jumper</string>
    <string name="facebook">Facebook</string>
    <string name="googleplus">Google+</string>
    <string name="signup">Sign up</string>
    <string name="ContinueasaGuest">Continue</string>
    >
    <string name="pic"></string>
    <string name="search"></string>
    <string name="trips">Trips</string>
    <string name="offers">Offers</string>
    <string name="home">Home</string>
    <string name="tripdirection">Sharm El-Sheihk</string>
    <string name="companyname">Company name</string>
    <string name="wishlist">Wishlist</string>
    <string name="invitefriends">Invite Friends</string>
    <string name="Settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="tripduration">Trip duration/date</string>
    <string name="notification">Updates about the trip</string>
    <string name="noconnection">No connection</string>
    <string name="retry">Retry</string>
    <string name="search_start_data">Choose tour start date</string>
    <string name="search_end_data">Choose tour end date</string>
    <string name="search_free_time">Set your free time</string>
    <string name="search_budget">Set you budget</string>
    <string name="search_place">Select a place</string>
    <string name="search_activities">Select Activities</string>
    <string name="search_transportation">Preferred transportation</string>
    <string name="search_company">Preferred company</string>
    <string name="friendname">Friend name</string>
    <string name="title_activity_notification">Notification</string>
    <string name="title_activity_invite_friend">InviteFriend</string>
    <string name="advancedsearc">Advanced Search</string>
    <string name="notificationtitle">Notifications</string>
    <string name="searchActivity"> </string>
    <string name="title">Home </string>
    <string name="logo" />
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="notification_icon" />
    <string name="copyrights">\u00a9 2015</string>
    <string name="aboutusquote">Jumper is made to make your travel easier and more enjoyable</string>
    <string name="visitWebsite">Visit Website</string>

    <string name="alert_dialog_title">Please Select</string>
    <string name="positive_button_text">Select</string>
    <string name="negative_button_text">Cancel</string>
    <string name="Done">Done</string>
    <string name="Cancel">Cancel</string>
    <string name="DurationDatePickerFragment">durationDatePickerFragment</string>
    <string name="selectFromGallery">Select from gallery</string>
    <string name="Error">invalid Email address</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="title_activity_tbas">Tbas</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
