<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.applitainment.tabs.flipscreenFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/walkthrough_bg"
    android:orientation="vertical"
    tools:layout="@layout/listview">

    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_margin="20dp"
            android:src="@drawable/logo_icon_walk" />

        <TextView
            android:id="@+id/Jumper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center_horizontal"
            android:text="@string/Jumper" />

        <TextView
            android:id="@+id/travelanywhere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center_horizontal"
            android:text="@string/travelanywhere" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/alreadyjumper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/alreadyjumper_btn"
            android:gravity="center"
            android:text="@string/alreadyjumper"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/fb_btn_walk"
                android:text="@string/facebook"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/google_btn"
                android:src="@drawable/google1"
                android:text="@string/googleplus"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signup"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:background="@null"
                android:text="@string/signup"
                android:textColor="@android:color/white"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/continueasaGuest"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:text="@string/ContinueasaGuest"
                android:layout_marginLeft="90dp"
                android:textColor="@android:color/white"
                android:textSize="16dp" />
                <!--android:layout_marginLeft="100dp"-->
        </LinearLayout>


    </LinearLayout>

</FrameLayout>
